infra/k8s/gateway/httpRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sps-route
  namespace: sps-ns
spec:
  parentRefs:
    - name: sps-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-svc
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: auth-service
          port: 4001
    - matches:
        - path:
            type: PathPrefix
            value: /parking
      backendRefs:
        - name: parking-service
          port: 4002
    - matches:
        - path:
            type: PathPrefix
            value: /booking
      backendRefs:
        - name: booking-service
          port: 4003
    - matches:
        - path:
            type: PathPrefix
            value: /payment
      backendRefs:
        - name: payment-service
          port: 4004
    - matches:
        - path:
            type: PathPrefix
            value: /notification
      backendRefs:
        - name: notification-service
          port: 4006
